objects/LH__Lookup_Helper_Record_Creation__c.object
<CustomObject>
    <fields>
        <fullName>LH__Lookup_Helper_Setting__c</fullName>
        <label>Lookup Helper Setting</label>
        <referenceTo>LH__Lookup_Helper_Setting__c</referenceTo>
        <relationshipLabel>Lookup Helper Record Creations</relationshipLabel>
        <relationshipName>Lookup_Helper_Record_Creations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LH__Record_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Lookup Helper Record Creation</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Helper Record Creations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>